added missing bidirectional connection